app/javascript/styles/_index.scss
/* Note: 
 * These style rely on some sass code from the govuk design files
 **/


@mixin responsive_width($width: full, $at: tablet) {
  @if $at != desktop {
    width: 100%;
  }

  @include govuk-media-query($from: $at) {
    width: govuk-grid-width($width);
  }
}

@mixin button_type_link {
  @include govuk-font($size: 19);
  background-color: govuk-colour("white");
  border: govuk-colour("blue") solid 2px;
  color: govuk-colour("blue");
  cursor: pointer;
  display: block;
  padding: govuk-spacing(1);
  text-decoration: none;

  &:hover {
    background-color: govuk-colour("blue");
    color: govuk-colour("white");
  }
}


.width-responsive-two-thirds {
  @include responsive_width("two-thirds");
}



// FB-Editor styles
.fb-editor-list,
.fb-editor-list li {
  list-style: none;
  margin: 0;
  padding: 0;
}

.fb-editor-form-list {
  margin-bottom: govuk-spacing(5);

  li {
    border-bottom: govuk-colour("mid-grey") solid 1px;
    padding: govuk-spacing(3) 0;

    &:last-child {
      border: none;
    }
  }

  .actions {
    float: right;
    text-align: right;
    width: 25%;
  }

  .name {
    display: inline-block;
    font-weight: bold;
    width: 75%;
  }
}

#header-logo-link {
  display: inline-block;
  margin-right: govuk-spacing(2);
  position: relative;
  top: -2px;
  vertical-align: middle;
}


/* Navigation: Pages
 * URLs: /services/.../edit
 **/
.form-overview {
  display: inline-flex;
  position: relative;

  .govuk-button {
    display: none; // JS injected element, not required.
  }
}

.form-overview_button {
  // This element is injected by JS
  @include button_type_link;
  padding: 9px;
  position: absolute;
  right: -113px;
  top: calc(50% - 30px);

  &:before {
    content: "+";
    margin-right: 2px;
  }
}

.form-step {
  display: inline-block;
  padding-right: 100px;
  overflow: hidden;
  position: relative;

  img {
    border:  $govuk-link-colour solid 2px;
    display: block;
    width: 200px;

    &:hover {
      border-color: $govuk-link-hover-colour;
    }
  }

  &:after {
    border-top: govuk-colour("black") solid 2px;
    content: "";
    position: absolute;
    right: 5px;
    top: calc(45% - 1px);
    width: 93px;
  }

  &:before {
    border: govuk-colour("black") solid 5px;
    border-top-color: govuk-colour("white");
    border-left-color: govuk-colour("white");
    content: "";
    position: absolute;
    right: 4px;
    transform: rotate(-45deg);
    top: calc(45% - 5px);
  }

  &:hover {
    button {
      visibility: visible;
    }
  }
}

.form-step_button {
  @include button_type_link;
  border: govuk-colour("blue") solid 2px;
  border-radius: 25px;
  bottom: calc(25px + #{govuk-spacing(2)});
  height: 35px;
  left: 158px;
  padding: 0;
  position: absolute;
  text-indent: -1000px;
  visibility: hidden;
  width: 35px;

  &:after {
    content: "...";
    display: block;
    font-weight: bold;
    letter-spacing: 2px;
    left: 1px;
    position: relative;
    text-indent: 0;
    top: -27px;
  }
}


/* govuk-button style is green but we want
 * green blue buttons on fb-editor.
 **/
.govuk-button {
  background-color: govuk-colour("blue");

  &:hover {
    background-color: govuk-colour("dark-blue");
  }
}

.govuk-form-group--error {
  .govuk-input {
    border: $govuk-border-width-form-element-error solid $govuk-error-colour;

    &:focus {
      border-color: $govuk-input-border-colour;
    }
  }
}


/* govuk-navigation does not appear to exist
 * so adding something simple here.
 **/
.govuk-navigation {
  &, li {
    list-style: none;
    margin: 0;
    padding: 0;
  }
}


/* govuk-app-navigation does not appear to exist
 * but these styles are influenced by the GovUK
 * design system site.
 * These styles add to .govuk-navigation (above)
 **/
.govuk-navigation-app {
  background-color: govuk-colour("light-grey");
  border-bottom: govuk-colour("mid-grey") solid 1px;
  box-sizing: border-box;
  line-height: 1.25em;
  overflow: hidden;
  padding-top: govuk-spacing(2);
  -webkit-box-sizing: border-box;


  .heading {
    float: left;
    margin: 0;
    padding-top: govuk-spacing(2);
  }

  li {
    @include govuk-font($size: 19);
    color: $govuk-link-colour;
    display: inline-block;
    font-weight: 700;
    margin-left: govuk-spacing(5);
    padding: govuk-spacing(2);
    padding-bottom: calc(#{govuk-spacing(2)} - 4px); // Calc to compensate for border
    text-align: right;

    a, a:hover {
      color: inherit;
      font: inherit;
      text-decoration: none;
    }

    &:hover {
      color: govuk-colour("light-blue");
    }

    &.current {
      border-bottom:  govuk-colour("blue") solid 4px;

      &:hover {
        border-color: govuk-colour("light-blue");
      }
    }
  }

  ul {
    float: right;
  }
}

